[project]
name = "LeetCode"
version = "0.1.0"
requires-python = ">=3.14"
authors = [{ name = "Dmitrii Volodin", email = "mr.molkree@gmail.com" }]

[dependency-groups]
build = ["uv==0.11.11"]
dev = [
    "black==26.3.1",
    "flake8==7.3.0",
    "isort==8.0.1",
    "mypy==1.20.2",
    "pep8-naming==0.15.1",
    "prek==0.3.13",
]
